fix(ui): remove extra spacing between input fields and top table border

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,7 +83,7 @@ table {
   color: #d96028;
   border-radius: 50px;
   left: 25px;
-  top: -7px;
+  top: -17px;
   font-size: 11px;
 }
 .product-edit-field-label,
@@ -152,7 +152,6 @@ table {
 }
 .product-edit-field,
 .product-addition-field {
-  margin-top: 10px;
   margin-bottom: 10px;
   border-color: #c95018;
   border-radius: 5px;
